--- a/style/stylehome.css
+++ b/style/stylehome.css
@@ -23,6 +23,7 @@ html{
 }
 
 .header{
+    
     justify-content: space-between;
     display: flex;
     backdrop-filter: blur(15px);
@@ -85,6 +86,64 @@ html{
 }
 
 .blank {
+    width: 100%;
     background-color: white;
-    height: 75vh;
+    height: 400px;
+    background-color: transparent;
+    z-index: -1;
+}
+
+#img-background{
+    width: 100%;
+
+    position: relative;
+    bottom: 360px;
+    z-index: -1;
+}
+
+.titulo-hero{
+    color: #ffffff;
+  text-align: center;
+  font-size: 128px;
+  letter-spacing: -0.04em;
+  font-weight: 900;
+ }
+
+ .titulo-hero span{
+    color: #f28705;
+ }
+
+.hero-section{
+    color: #ffffff;
+  text-align: center;
+  font-size: 20px;
+  letter-spacing: -0.04em;
+  font-weight: 400;
+}
+
+#input-email{
+    border-radius: 32px;
+  border-style: solid;
+  border-color: #ffffff;
+  border-width: 1px;
+ background-color: transparent;
+  height: 40px;
+}
+
+#send-email{
+    border-radius: 32px;
+  border-style: solid;
+  border-color: #ffffff;
+  border-width: 1px;
+  width: 127px;
+  height: 30px;
+
+}
+
+.botoes{
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
 }
