--- a/style/benefits.css
+++ b/style/benefits.css
@@ -7,11 +7,11 @@
     justify-content: center;
 }
 .container {
-    padding: 70px;
+    padding: 70px 0px 70px 0px;
     height: 650px;
     max-width: 60%;
     text-align: center;
-
+    
 }
 
 h1 {
