--- a/style/stylehome.css
+++ b/style/stylehome.css
@@ -1,158 +1,152 @@
-*{
-    padding: 0px;
-    margin: 0px;
-    font-family: 'Roboto', serif;
+* {
+  padding: 0px;
+  margin: 0px;
+  font-family: "Roboto", serif;
 }
 
-html{
-    background-color: #F2BB16;
+html {
+  background-color: #f2bb16;
 }
 
 .vertical-line1 {
-    width: 1.5px; 
-    height: 75px; 
-    background-color: white;
+  width: 1.5px;
+  height: 75px;
+  background-color: white;
 }
 
 .vertical-line2 {
-    margin-right: 10px;
-    width: 1.5px; 
-    height: 75px; 
-    background-color: white;  
-    
+  margin-right: 10px;
+  width: 1.5px;
+  height: 75px;
+  background-color: white;
 }
 
-.header{
-    
-    justify-content: space-between;
-    display: flex;
-    backdrop-filter: blur(15px);
-    border-color: white;
-    border-width: 1px;
-    width: 100%;
-    height: 80px;
-    align-items: center;
-    border-bottom: 2px solid white; 
-    
+.header {
+  justify-content: space-between;
+  display: flex;
+  backdrop-filter: blur(15px);
+  border-color: white;
+  border-width: 1px;
+  width: 100%;
+  height: 80px;
+  align-items: center;
+  border-bottom: 2px solid white;
 }
 
-.logo  {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+.logo {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
-.box-menu{
-    padding-left: 2%;
-    padding-right: 2%;
-    
-    justify-content: end;
-    display: flex;
-    
+.box-menu {
+  padding-left: 2%;
+  padding-right: 2%;
+
+  justify-content: end;
+  display: flex;
 }
 
 .nav-list a {
-    text-decoration: none; 
-    color: white; 
+  text-decoration: none;
+  color: white;
 }
 
 .nav-list a:visited {
-    color: white;
+  color: white;
 }
 
-
-.nav-list a, .nav-list li {
-    border: none;
-    outline: none;
+.nav-list a,
+.nav-list li {
+  border: none;
+  outline: none;
 }
 
-
-.nav-list  {
-    padding-left: 2%;
-    padding-right: 2%;
-    justify-content: start;
-    width: 30%;
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
+.nav-list {
+  padding-left: 2%;
+  padding-right: 2%;
+  justify-content: start;
+  width: 30%;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
 }
 
-.nav-list li{
-    color: white;
-    font-size: 20px; 
-    font-weight: 400; 
-    word-wrap: break-word;
-    text-decoration: none;
+.nav-list li {
+  color: white;
+  font-size: 20px;
+  font-weight: 400;
+  word-wrap: break-word;
+  text-decoration: none;
 }
 
 .blank {
-    background-attachment: fixed;
-    width: 100%;
-    background-color: white;
-    height: 460px;
-    background-color: transparent;
-    z-index: -1;
+  background-attachment: fixed;
+  width: 100%;
+  background-color: white;
+  height: 460px;
+  background-color: transparent;
+  z-index: -1;
 }
 
-#img-background{
-    width: 100%;
-    background-attachment: fixed;
+#img-background {
+  width: 100%;
+  background-attachment: fixed;
 
-    position: relative;
-    bottom: 440px;
-    z-index: -1;
+  position: relative;
+  bottom: 440px;
+  z-index: -1;
 }
 
-.titulo-hero{
-    color: #ffffff;
+.titulo-hero {
+  color: #ffffff;
   text-align: center;
   font-size: 128px;
   letter-spacing: -0.04em;
   font-weight: 900;
- }
+}
 
- .titulo-hero span{
-    color: #f28705;
- }
+.titulo-hero span {
+  color: #f28705;
+}
 
-.hero-section{
-    position: relative;
-    top: 160px;
-    color: #ffffff;
+.hero-section {
+  position: relative;
+  top: 160px;
+  color: #ffffff;
   text-align: center;
   font-size: 20px;
   letter-spacing: -0.04em;
   font-weight: 400;
 }
 
-#input-email{
-    border-radius: 32px;
+#input-email {
+  border-radius: 32px;
   border-style: solid;
   border-color: #ffffff;
   border-width: 1px;
- background-color: transparent;
+  background-color: transparent;
   height: 30px;
   width: 626px;
   margin-top: 20px;
 }
 
-#send-email{
-    border-radius: 32px;
+#send-email {
+  border-radius: 32px;
   border-style: solid;
   border-color: #ffffff;
   border-width: 1px;
   width: 127px;
   height: 30px;
-background-color: transparent;
-color: white;
-margin-top: 20px;
-
+  background-color: transparent;
+  color: white;
+  margin-top: 20px;
 }
 
-.botoes{
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    flex-direction: column;
+.botoes {
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
 }
