--- a/style/bef_aft.css
+++ b/style/bef_aft.css
@@ -34,7 +34,7 @@
   
   .description-bfaf {
     color: #ffffff;
-    text-align: left;
+    text-align: center;
     font-size: 20px;
     letter-spacing: -0.04em;
     font-weight: 500;
@@ -43,35 +43,39 @@
 
   .slider-container {
     position: relative;
-    width: 70%;
+    width: 80%;
     margin: auto;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .slider {
     display: flex;
+    gap: 50px; /* Espaçamento maior entre as imagens */
     transition: transform 0.5s ease-in-out;
+    align-items: center;
 }
 
 .slide {
-    flex: 0 0 25%;
+    flex: 0 0 20%;
     transition: transform 0.5s ease;
-    align-content: space-around;
-    gap: 10rem;
+    opacity: 0.6;
+    transform: scale(0.8); /* Deixa as imagens laterais menores */
+}
+
+.slide.active {
+    flex: 0 0 40%;
+    opacity: 1;
+    transform: scale(1); /* Mantém a imagem central maior */
 }
 
 .slide img {
     width: 100%;
     border-radius: 10px;
-    transition: transform 0.5s ease;
+    transition: transform 0.5s ease, opacity 0.5s ease;
 }
-
-.slide.active {
-    flex: 0 0 50%;
-    padding-left: 5rem;
-    padding-right: 5rem;
-}
-
 
 .prev, .next {
     position: absolute;
@@ -83,6 +87,7 @@
     cursor: pointer;
     font-size: 24px;
     border-radius: 50%;
+    z-index: 2;
 }
 
 .prev {
