--- a/style/bef_aft.css
+++ b/style/bef_aft.css
@@ -5,7 +5,6 @@
     display: flex;
     justify-content: center;
     text-align: center;
-    padding: 50px 0;
   }
   
   .container-bfaf {
@@ -13,6 +12,10 @@
     max-width: 60%;
     text-align: center;
     padding: 70px 0px 70px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
   
   .blur-back {
@@ -41,60 +44,6 @@
     padding-bottom: 2rem;
   }
 
-  .slider-container {
-    position: relative;
-    width: 80%;
-    margin: auto;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-.slider {
-    display: flex;
-    gap: 50px; /* Espaçamento maior entre as imagens */
-    transition: transform 0.5s ease-in-out;
-    align-items: center;
-}
 
-.slide {
-    flex: 0 0 20%;
-    transition: transform 0.5s ease;
-    opacity: 0.6;
-    transform: scale(0.8); /* Deixa as imagens laterais menores */
-}
-
-.slide.active {
-    flex: 0 0 40%;
-    opacity: 1;
-    transform: scale(1); /* Mantém a imagem central maior */
-}
-
-.slide img {
-    width: 100%;
-    border-radius: 10px;
-    transition: transform 0.5s ease, opacity 0.5s ease;
-}
-
-.prev, .next {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(255, 255, 255, 0.6);
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    font-size: 24px;
-    border-radius: 50%;
-    z-index: 2;
-}
-
-.prev {
-    left: -40px;
-}
-
-.next {
-    right: -40px;
-}
-  
+/*===========================================*/
