--- a/style/stylehome.css
+++ b/style/stylehome.css
@@ -43,7 +43,7 @@ html {
   justify-content: space-between;
   display: flex;
   align-items: center;
-  width: 5%;
+  width: 4.3%;
 }
 
 
@@ -170,3 +170,4 @@ html {
   display: flex;
   flex-direction: column;
 }
+/*==botaous-br=======================================*/
